# kritzel

./: AUTHORS  CMakeLists.txt  README-cellwriter.md  README.md  cellwriter.diff  profile
src/: CMakeLists.txt  inputpanel.cpp  inputpanel.h  main.cpp  view.cpp  view.h  window.cpp  window.h
src/cellwriter/: common.h  config.h  libcellwriter.c  libcellwriter.h  preprocess.c  profile.c  recognize.c  recognize.h  stroke.c  unicode.c  wordfreq.c
src/ink/: cell.cpp  cell.h  ink.cpp  ink.h  inkitem.cpp  inkitem.h  recognizer.cpp  recognizer.h  sample.h
